Added and fixed the documengation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,6 @@ importFrom(purrr,pluck)
 importFrom(purrr,reduce)
 importFrom(stringr,str_glue)
 importFrom(stringr,str_to_lower)
-importFrom(tidyr,"unnesst_wieder,")
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,separate)
+importFrom(tidyr,unnest_wider)
