Fixed typos and imports in documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(sto_3g_generator)
 export(sto_generator)
 importFrom(dplyr,mutate)
 importFrom(httr,GET)
+importFrom(httr,content)
 importFrom(httr,status_code)
 importFrom(jsonlite,fromJSON)
 importFrom(purrr,map)
